; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_TerminateModuleForkChild.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_TerminateModuleForkChild.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i32*, i32* }

@server = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@C_ERR = common dso_local global i32 0, align 4
@LL_NOTICE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"Killing running module fork child: %ld\00", align 1
@SIGUSR1 = common dso_local global i32 0, align 4
@moduleForkInfo = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@C_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TerminateModuleForkChild(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @server, i32 0, i32 0), align 4
  %8 = icmp eq i32 %7, -1
  br i1 %8, label %13, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @server, i32 0, i32 0), align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %9, %2
  %14 = load i32, i32* @C_ERR, align 4
  store i32 %14, i32* %3, align 4
  br label %39

15:                                               ; preds = %9
  %16 = load i32, i32* @LL_NOTICE, align 4
  %17 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @server, i32 0, i32 0), align 4
  %18 = sext i32 %17 to i64
  %19 = call i32 @serverLog(i32 %16, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i64 %18)
  %20 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @server, i32 0, i32 0), align 4
  %21 = load i32, i32* @SIGUSR1, align 4
  %22 = call i32 @kill(i32 %20, i32 %21)
  %23 = icmp ne i32 %22, -1
  br i1 %23, label %24, label %35

24:                                               ; preds = %15
  %25 = load i32, i32* %5, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %35

27:                                               ; preds = %24
  br label %28

28:                                               ; preds = %33, %27
  %29 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @server, i32 0, i32 0), align 4
  %30 = call i32 @wait4(i32 %29, i32* %6, i32 0, i32* null)
  %31 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @server, i32 0, i32 0), align 4
  %32 = icmp ne i32 %30, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %28
  br label %28

34:                                               ; preds = %28
  br label %35

35:                                               ; preds = %34, %24, %15
  store i32 -1, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @server, i32 0, i32 0), align 4
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @moduleForkInfo, i32 0, i32 1), align 8
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @moduleForkInfo, i32 0, i32 0), align 8
  %36 = call i32 (...) @closeChildInfoPipe()
  %37 = call i32 (...) @updateDictResizePolicy()
  %38 = load i32, i32* @C_OK, align 4
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %35, %13
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @serverLog(i32, i8*, i64) #1

declare dso_local i32 @kill(i32, i32) #1

declare dso_local i32 @wait4(i32, i32*, i32, i32*) #1

declare dso_local i32 @closeChildInfoPipe(...) #1

declare dso_local i32 @updateDictResizePolicy(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
